[package]
name = "tunnelbore"
version = "0.1.0"
authors = ["Jan Beinke <git@janbeinke.com>"]
edition = "2021"
#license = "GPL-3.0 OR BSD-3-Clause"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.57"
base64 = "0.21.0"
blake2 = "0.10.6"
digest = "0.10.6"
figment = { version =  "0.10.8", features = [ "env", "toml" ] }
hashbrown = "0.13"
lazy_static = "1.4.0"
proc-macro2 = {}
quote = "1.0"
rand = "0.8.5"
serde = { version = "1.0", features = [ "derive" ] }
snow = "0.9.0"
tai64 = "4.0.0"
thiserror = "1.0"
tokio = { version = "1", features = [ "full" ] }
void = "1"
#libbpf-rs = { git = "https://github.com/libbpf/libbpf-rs" }
##libbpf-rs = "~0.18.1"
#libc = "0.2"
#structopt = "0.3"
#ctrlc = "3.1"
#plain = "0.2"

[dev-dependencies]
tunnelbore_macros = { path = "../tunnelbore_macros" }

[build-dependencies]
#libbpf-cargo = { git = "https://github.com/libbpf/libbpf-rs" }
#libbpf-cargo = "~0.12.1"

[lib]
name = "tunnelbore"

[[example]]
name = "tunnelbore"

[[example]]
name = "tunnelbore-server"
